After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 771049 - clutter: Compress instead of discard motion events
clutter: Compress instead of discard motion events
Status: RESOLVED FIXED
Product: mutter
Classification: Core
Component: wayland
unspecified
Other All
: Normal normal
: ---
Assigned To: mutter-maint
mutter-maint
Depends on:
Blocks:
 
 
Reported: 2016-09-08 11:07 UTC by Jonas Ådahl
Modified: 2016-09-09 03:11 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
clutter: Compress instead of discard motion events (6.83 KB, patch)
2016-09-08 11:07 UTC, Jonas Ådahl
committed Details | Review

Description Jonas Ådahl 2016-09-08 11:07:31 UTC
We discarded relative motion events if there were any compression (multiple
motion events in a row within one frame). This caused funky issues with games
since the mouse sensitivity became completely different as multiple events were
sometimes just dropped.

Fix that by compressing motion events. Compressing here means combining all of
the relative motion events, if any. In the future I guess this should be
replaced with clutter not doing this compressing for us, but again, lets leave
that for another day.
Comment 1 Jonas Ådahl 2016-09-08 11:07:37 UTC
Created attachment 335084 [details] [review]
clutter: Compress instead of discard motion events

Clutter discards any motion event if next event happens to also be a
motion event. This is problematic when the motion event carries
relative motion deltas, since the information about them is completely
lost.

Until we have moved away made the stage stop discarding motion events,
lets work around the issue by compressing them, effectively adding
multiple relative motion deltas together, would one be discarded.
Comment 2 Rui Matos 2016-09-08 13:18:11 UTC
Review of attachment 335084 [details] [review]:

looks good

::: clutter/clutter/clutter-device-manager.h
@@ +92,2 @@
   /* padding */
+  gpointer _padding[6];

heh, fine, though we don't really need to care about abi stability here
Comment 3 Jonas Ådahl 2016-09-09 03:11:31 UTC
Attachment 335084 [details] pushed as d893adb - clutter: Compress instead of discard motion events